# Temporal-Dynamics-in-Recommendation-Systems

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_demo.py
.github/workflows/: ci.yml
configs/: model_config.yaml
data/: interactions.csv  items.csv
scripts/: cli.py
src/: __init__.py
src/data/: __init__.py  data_pipeline.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  temporal_recommender.py
src/utils/: __init__.py
tests/: test_data_pipeline.py  test_evaluation.py  test_models.py
